2011-02-07  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/dmcs/StreamingDMCS.cpp: Trigger neighbors only at the first
	round.

	* include/network/RouterThread.h: Pass on SAT's reset messages to
	neighbors.

	* include/dmcs/ConflictNotification.h: Allow sending NULL
	conflicts.
	* include/network/NeighborOut.h: Likewise.
	* include/dmcs/UnsatNotification.h: Likewise.
	* include/dmcs/StreamingForwardMessage.h: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.

	* src/network/OutputThread.cpp: Add some more debug info.

	* include/solver/RelSatSolver.h: Add update_local_input().
	* src/solver/RelSatSolver.cpp: Likewise.

2011-02-07  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/Makefile.am (testMessagingGateway_LDADD): Add liblog.a

	* src/network/ConcurrentMessageDispatcher.cpp: Enable logging.

	* include/network/NeighborThread.h: Fix queue parameters.

	* src/dmcsc.cpp: Add total model sampling.
	(handle_belief_state): Fix locking.

	* examples/run-streaming.sh: Add timelimit support, make run and
	timelimit optional.
	Time all daemons and client with time --verbose.
	Kill daemons before grep run logs.
	* examples/run-opt.sh: Likewise.
	* examples/ring-3-10-5-5-a/run-streaming.sh: Likewise.
	* examples/ring-3-10-5-5-a/run-opt.sh: Likewise.

2011-02-06  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dmcsc.cpp: Add SIGINT signal handler and sampling of models.

	* examples/ring-3-10-5-5-a: New example.

	* include/dmcs/StreamingForwardMessage.h: Fix streaming
	asynchronous client.
	* include/network/AsynClient.tcc: Likewise.
	* include/network/AsynClient.h: Likewise.
	* include/network/BaseClient.h: Likewise.
	* src/dmcsc.cpp: Likewise.

	* src/dmcsc.cpp: Run io_service in its own thread in streaming mode.

	* testsuite/Makefile.am (testQueryPlan_LDADD): Add liblog.a.

2011-02-06  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/solver/RelSatSolver.cpp: Send NULL at leaf, when EOF.

	* src/dmcs/BeliefCombination.cpp: Add &.
